Fixed menubar background so it doesnt appear stretched

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -57,7 +57,7 @@
 	
 	engine: unico;
 	-unico-focus-border-color: alpha (@selected_bg_color, 0.5);
-	-unico-focus-border-radius: 2;
+	-unico-focus-border-radius: 0;
 	-unico-focus-fill-color: alpha (@selected_bg_color, 0.1);
 	-unico-focus-outer-stroke-color: @transparent;
 	-unico-inner-stroke-color: shade (@bg_color, 1.1);
@@ -112,11 +112,11 @@ GtkAssistant .sidebar .highlight {
 }
 
 GtkAssistant .sidebar {
-    background-color: shade (@bg_color, 0.97);
+    background-color: shade (@dark_fg_color, 0.97);
     border-right-color: shade (@bg_color, 0.8);
     border-radius: 0;
     border-style: solid;
-    border-width: 0px 1px 0px 0px;
+    border-width: 0px 2px 0px 0px;
     padding: 12px;
 
     color: mix (@fg_color, @bg_color, 0.40);
@@ -666,7 +666,7 @@ GtkIconView.view.cell:selected:focused {
  * menubar *
  ***********/
 .menubar {
-  engine: unico;
+  engine: adwaita;
 	-GtkWidget-window-dragging: true;
 	color: @selected_fg_color;
     border-width: 0;
@@ -827,7 +827,7 @@ GtkImage {
 .notebook tab {
   background-color: #E0E0E0;
   border-width: 0px 1px 10px 1px;
-  padding: 10px 4px 14px 4px;
+  padding: 5px 2px 7px 2px;
   border-image : url("assets/notebook-tab-normal.svg") 0 1 4 1 stretch;
   background-image : -gtk-gradient (linear,
                left top, right bottom,
